syntax = "proto3";

package notekeeper;

import public "common.proto";
import public "title.proto";

message Collection {
	string id = 1;
	Title name = 2;
	bool locked = 3;
	string shelfId = 4;
	string created = 5;
	string updated = 6;
}

message GetCollectionsRequest {
	RequestHeader header = 1;
	string shelfId = 2;
	string scope = 3; // account or user
}

message GetCollectionsResponse {
	ResponseHeader header = 1;
	repeated Collection collections = 2;
}

message CreateCollectionRequest {
	RequestHeader header = 1;
	Title name = 2;
	string shelfId = 3;
	string scope = 4;
}
// Response is an IdResponse

message SaveCollectionRequest {
	RequestHeader header = 1;
	string id = 2;
	string shelfId = 3;
	string scope = 4;
	Title name = 5;
	bool locked = 6;
}
// Response is an EmptyResponse

message DeleteCollectionRequest {
	RequestHeader header = 1;
	string id = 2;
	string shelfId = 3;
	string scope = 4;
}
// Response is an EmptyResponse
